{
    "name": "SHO_player_input",
    "maps": [
        {
            "name": "Player1",
            "id": "f41678ce-4e07-4735-bdee-0c9fdc04bd3c",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "99b8ebef-b547-4f46-8f75-d7608b872bc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "33968dc2-de9c-4ba9-b8a6-c914f78a04b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "b1980d4a-74ed-45d5-9804-4b8a7fd643bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "72055966-b283-4d6a-94b6-9e2c4362d965",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act1",
                    "type": "Button",
                    "id": "a92b6260-7b6b-4fd1-8f8d-1412324e2923",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act2",
                    "type": "Button",
                    "id": "f31534ad-5a56-4e07-bc0a-613c33e7fd88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "454caaa9-8645-490a-a186-d0b5896d26dd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f623dbc4-797f-442d-a249-0d2c0d43bc5d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81aa144b-bd88-4664-8c01-d93c0e195bf8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "533b70a1-8244-4628-9539-ea99d858ce28",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6c40606-063a-4aca-b966-6a6b555e1927",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3d7ea4b-cb1d-4d2c-99f0-4d23d1ac83ad",
                    "path": "<Keyboard>/#(!)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "f8c155b5-3e65-4a53-823c-f53e7a91e2c7",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "f3b7ae8f-252f-486d-bf61-f06830c9d479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "bb6d0da0-f07b-4b3c-8b52-59302d0caecf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "54673844-1f2f-4c61-82d0-63f117ee5a6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "017d044f-6d27-436a-bf24-501dfcba78d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act1",
                    "type": "Button",
                    "id": "8a7ec195-c39d-4d67-96d2-068a460d407a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act2",
                    "type": "Button",
                    "id": "1f98c61c-bcde-4598-83c7-2d8c3335ba1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c791c7ba-72ab-44fa-a6d7-2c8ceef3488b",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92ed86c0-e975-494d-8796-302eaa8331d0",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b03c7ce8-6041-4199-8df4-3ae9e5185960",
                    "path": "<Keyboard>/#(Z)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "371d9152-f355-4de2-8e52-db94835de01d",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa341755-d843-468a-9fc8-4d9c75512ec2",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48d46685-bcd9-4023-a744-a757aa011c3f",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player3",
            "id": "98f70708-e071-4e52-876a-f9066c018036",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "009bad12-186c-4aec-9f6c-0230480bbf99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "cb9d96ff-1f68-4f45-aaff-373517d1b13a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "83438682-4a56-46fd-a45c-b99c62313ec4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "94c89b17-cd59-44c0-883e-6f2ad6801f21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act1",
                    "type": "Button",
                    "id": "cd251b8e-aa9d-499f-bcb4-4a4d5e811151",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act2",
                    "type": "Button",
                    "id": "ad7d44f2-6514-4654-9cf7-4ce5c3c12ae6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93b56a44-f247-43b1-86e4-ebe7db65ca63",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33de31c0-287a-40d2-b850-c1d32f1e02a1",
                    "path": "<Keyboard>/#(H)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "103d255c-452a-4560-a96f-88f25d32ca1a",
                    "path": "<Keyboard>/#(T)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "730f7380-6bb6-4847-991c-b13ea31498dc",
                    "path": "<Keyboard>/#(G)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcf32e08-c9b2-4485-a8ab-a186eaf3fd48",
                    "path": "<Keyboard>/#(Y)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b59bc0d-7772-4282-810b-7aa5e193fdf9",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player4",
            "id": "33cf01f1-f098-4f9e-8181-73f2259f7036",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "d28b1c83-2d61-49c4-9ae8-455e96b8147b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "f4686b4c-ecfa-4739-a622-ec5b7368bea2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "582be0be-601c-49af-9ef0-f8245d2e4acc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "b95ba52b-f36e-447c-a35f-a0fc3f6e685d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act1",
                    "type": "Button",
                    "id": "7769d20d-28d3-444c-acc7-63eb1ee392eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act2",
                    "type": "Button",
                    "id": "810c578d-2fd3-4fad-aeb8-eb21650ee2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b05935f-fdd6-4933-b360-70a2ba6fb87b",
                    "path": "<Keyboard>/#(K)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33fa8b6f-d4ac-4270-a50b-f9b58f7d54b7",
                    "path": "<Keyboard>/#(M)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c901d294-8fc5-4c06-a333-109faf8712fc",
                    "path": "<Keyboard>/#(O)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad1806b1-7ac3-40f0-8004-10e9f68d21df",
                    "path": "<Keyboard>/#(L)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38f6a13a-aa60-4f15-89dd-ff51c2176376",
                    "path": "<Keyboard>/#(P)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df8d4068-1257-4d4b-86bb-637e4a086f95",
                    "path": "<Keyboard>/#(I)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}